# metagit

./: README.md  projects.bash  pyproject.toml  setup.py  tox.ini
.github/workflows/: publication.yml  validation.yml
src/: projects.py
src/metagit/: __init__.py  __main__.py
tests/: conftest.py  test_api.py  test_cli.py  test_projects.py  util.py
