[build-system]
requires = ["setuptools ~= 58.5", "setuptools-scm ~= 6.4", "wheel ~= 0.37.0"]
build-backend = "setuptools.build_meta"

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
[tool.pylint.messages_control]
disable = "C0330, C0326"
[tool.pylint.format]
max-line-length = "88"

[tool.setuptools_scm]
